cabal-version: 3.8
name: haskell-lua-testing
version: 0.1.0.0
author: sondre@eons.io
maintainer: Sondre Aasemoen
license: NONE
extra-doc-files: CHANGELOG.md
build-type: Simple

common config
  build-depends:
    , base ^>=4.16
    , hslua ^>=2.2
    , hslua-core ^>=2.2
    , hslua-marshalling ^>=2.2
    , hslua-module-system ^>=1
    , hslua-module-text ^>=1
    , hslua-objectorientation ^>=2.2
    , hslua-packaging ^>=2.2
    , hslua-module-path ^>=1

  default-language: GHC2021  
  default-extensions: DerivingStrategies DuplicateRecordFields LambdaCase MultiWayIf OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -fhide-source-paths
    -Wmissing-export-lists
    -Wpartial-fields
    -Wmissing-deriving-strategies
    -Werror=missing-deriving-strategies
    -fwrite-ide-info
    -Wunused-packages

library
  import: config
  hs-source-dirs: src
  exposed-modules: LuaTest
  default-language: Haskell2010

executable hslua
  import: config
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: haskell-lua-testing
  default-language: Haskell2010
